--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Morphing Background Shapes | Demo 1 | Codrops</title>
+		<title>OVERTHINKING | Demo 1 | Codrops</title>
 		<meta name="description" content="A page background effect where SVG shapes morph and transform on scroll" />
 		<meta name="keywords" content="background, svg, morph, animation, scroll, shape, web development, css, javascript" />
 		<meta name="author" content="Codrops" />
@@ -28,20 +28,7 @@
 		</script>
 	</head>
 	<body class="demo-1 loading">
-		<svg class="hidden">
-			<symbol id="icon-arrow" viewBox="0 0 24 24">
-				<title>arrow</title>
-				<polygon points="6.3,12.8 20.9,12.8 20.9,11.2 6.3,11.2 10.2,7.2 9,6 3.1,12 9,18 10.2,16.8 "/>
-			</symbol>
-			<symbol id="icon-drop" viewBox="0 0 24 24">
-				<title>drop</title>
-				<path d="M12,21c-3.6,0-6.6-3-6.6-6.6C5.4,11,10.8,4,11.4,3.2C11.6,3.1,11.8,3,12,3s0.4,0.1,0.6,0.3c0.6,0.8,6.1,7.8,6.1,11.2C18.6,18.1,15.6,21,12,21zM12,4.8c-1.8,2.4-5.2,7.4-5.2,9.6c0,2.9,2.3,5.2,5.2,5.2s5.2-2.3,5.2-5.2C17.2,12.2,13.8,7.3,12,4.8z"/><path d="M12,18.2c-0.4,0-0.7-0.3-0.7-0.7s0.3-0.7,0.7-0.7c1.3,0,2.4-1.1,2.4-2.4c0-0.4,0.3-0.7,0.7-0.7c0.4,0,0.7,0.3,0.7,0.7C15.8,16.5,14.1,18.2,12,18.2z"/>
-			</symbol>
-			<symbol id="shape-demo" viewBox="0 0 200 100">
-				<title>shape demo</title>
-				<path d="M 6.144,74.1 C 20.4,107.4 70.13,94.33 94.22,95.74 121.3,97.41 130.8,101.1 154.7,99.38 178.6,97.72 201.9,78.95 199.4,46.86 197.1,14.96 174.9,4.781 161.4,1.827 147.9,-1.128 119.8,8.284 105.6,8.766 85.34,9.449 81.91,7.628 51.08,2.334 17.26,-3.482 -8.105,40.84 6.144,74.1 Z" />
-			</symbol>
-		</svg>
+		
 		<main>
 			<div class="morph-wrap">
 				<svg class="morph" width="1400" height="770" viewBox="0 0 1400 770">
@@ -57,7 +44,7 @@
 						<a class="codrops-icon codrops-icon--prev" href="https://tympanus.net/Development/FolderPreviewIdeas/" title="Previous Demo"><svg class="icon icon--arrow"><use xlink:href="#icon-arrow"></use></svg></a>
 						<a class="codrops-icon codrops-icon--drop" href="https://tympanus.net/codrops/?p=31190" title="Back to the article"><svg class="icon icon--drop"><use xlink:href="#icon-drop"></use></svg></a>
 					</div>
-					<h1 class="codrops-header__title">Morphing Background Shapes</h1>
+					<h1 class="codrops-header__title">OVERTHINKING</h1>
 				</header>
 				<nav class="demos">
 					<a class="demo demo--current" href="index.html"><svg class="decoshape" preserveAspectRatio="none"><use xlink:href="#shape-demo"></use></svg>Demo 1</a>
@@ -69,53 +56,53 @@
 						<path d="M27.4,171.8C73,42.9,128.6,1,128.6,1s0,0,0,0c58.5,0,368.3,0.3,873.2,0.8c38.5,211,42.1,373.5,38.9,476.7c-2.5,80.3-10.6,174.9-76.7,247.8c-15.1,16.6-37.4,41.2-72.8,53.9c-92.4,33.1-173-50.8-283.9-99.4c-224.3-98.4-334.9,51.4-472.2-45.6C-6.3,535.2-14.5,290.6,27.4,171.8z"/>
 					</svg>
 					<img class="pater__img" src="sponsor/hellosignapi.svg" alt="HelloSign API" />
-					<h4 class="pater__title">2x Faster Integration Time</h4>
+					<h4 class="pater__title">PANDEMIA COVID</h4>
 					<p class="pater__desc">Embed contracts and agreements into your site or app with a few lines of code.</p>
 				</a>
-				<div class="deco deco--title">2017 Westland Exhibition Center</div>
+				<div class="deco deco--title">Soluciones para Overthinkers</div>
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-1">
 					<img class="content__img" src="img/1.jpg" alt="Some image" />
-					<h3 class="content__title">revert</h3>
-					<p class="content__author">Gregory Mourisha</p>
-					<p class="content__desc">Finding the heart when paradise is lost.</p>
+					<h3 class="content__title">escribe</h3>
+					<p class="content__author"></p>
+					<p class="content__desc">vacía tu cabeza al dejar tus pensamientos en el papel.</p>
 					<a href="#" class="content__link">Discover</a>
 				</div>
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-2">
 					<img class="content__img" src="img/4.jpg" alt="Some image" />
-					<h3 class="content__title">bunch</h3>
-					<p class="content__author">Nikimo Westlane</p>
-					<p class="content__desc">The neverending quest, once and forever.</p>
+					<h3 class="content__title">reflexiona</h3>
+					<p class="content__author"></p>
+					<p class="content__desc">Descubre qué es lo que te preocupa o simplemente medita un rato.</p>
 					<a href="#" class="content__link">Discover</a>
 				</div>
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-3">
 					<img class="content__img" src="img/3.jpg" alt="Some image" />
-					<h3 class="content__title">found</h3>
-					<p class="content__author">Jane Westhall</p>
-					<p class="content__desc">Lost or found? That's the question today.</p>
+					<h3 class="content__title">ocupate</h3>
+					<p class="content__author"></p>
+					<p class="content__desc">Busca algo que te distraiga de tus pensamientos.</p>
 					<a href="#" class="content__link">Discover</a>
 				</div>
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-4">
 					<img class="content__img" src="img/2.jpg" alt="Some image" />
-					<h3 class="content__title">east</h3>
-					<p class="content__author">Walter Mastricht</p>
-					<p class="content__desc">The outer bounds of the world, from within.</p>
+					<h3 class="content__title">libera</h3>
+					<p class="content__author"></p>
+					<p class="content__desc">Habla con alguien sobre lo que piensas, puede ser persona o por videollamada.</p>
 					<a href="#" class="content__link">Discover</a>
 				</div>
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-1">
 					<img class="content__img" src="img/5.jpg" alt="Some image" />
-					<h3 class="content__title">frank</h3>
-					<p class="content__author">Frank Cherry</p>
-					<p class="content__desc">Frank's work and nothing more.</p>
+					<h3 class="content__title">ejercicio</h3>
+					<p class="content__author"></p>
+					<p class="content__desc">Libera endorfinas y olvidate de tus pensamientos por un rato.</p>
 					<a href="#" class="content__link">Discover</a>
 				</div>
 			</div>
