--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<a class="codrops-icon codrops-icon--prev" href="https://tympanus.net/Development/FolderPreviewIdeas/" title="Previous Demo"><svg class="icon icon--arrow"><use xlink:href="#icon-arrow"></use></svg></a>
 						<a class="codrops-icon codrops-icon--drop" href="https://tympanus.net/codrops/?p=31190" title="Back to the article"><svg class="icon icon--drop"><use xlink:href="#icon-drop"></use></svg></a>
 					</div>
-					<h1 class="codrops-header__title">OVERTHINKING</h1>
+					<h1 class="codrops-header__title">SOLUCIONES PARA OVERTHINKERS</h1>
 				</header>
 				<nav class="demos">
 					<a class="demo demo--current" href="index.html"><svg class="decoshape" preserveAspectRatio="none"><use xlink:href="#shape-demo"></use></svg>Demo 1</a>
@@ -57,13 +57,15 @@
 					</svg>
 					<img class="pater__img" src="sponsor/hellosignapi.svg" alt="HelloSign API" />
 					<h4 class="pater__title">PANDEMIA COVID</h4>
-					<p class="pater__desc">Embed contracts and agreements into your site or app with a few lines of code.</p>
+					<p class="pater__desc">cuarentena things
+			
+					</p>
 				</a>
-				<div class="deco deco--title">Soluciones para Overthinkers</div>
+				<div class="deco deco--title">Overthinking</div>
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-1">
-					<img class="content__img" src="img/1.jpg" alt="Some image" />
+					<img class="content__img" src="img/papel.png" alt="Some image" />
 					<h3 class="content__title">escribe</h3>
 					<p class="content__author"></p>
 					<p class="content__desc">vacía tu cabeza al dejar tus pensamientos en el papel.</p>
@@ -72,7 +74,7 @@
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-2">
-					<img class="content__img" src="img/4.jpg" alt="Some image" />
+					<img class="content__img" src="img/flor.png" alt="Some image" />
 					<h3 class="content__title">reflexiona</h3>
 					<p class="content__author"></p>
 					<p class="content__desc">Descubre qué es lo que te preocupa o simplemente medita un rato.</p>
@@ -90,7 +92,7 @@
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-4">
-					<img class="content__img" src="img/2.jpg" alt="Some image" />
+					<img class="content__img" src="img/ola.webp" alt="Some image" />
 					<h3 class="content__title">libera</h3>
 					<p class="content__author"></p>
 					<p class="content__desc">Habla con alguien sobre lo que piensas, puede ser persona o por videollamada.</p>
@@ -99,8 +101,8 @@
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-1">
-					<img class="content__img" src="img/5.jpg" alt="Some image" />
-					<h3 class="content__title">ejercicio</h3>
+					<img class="content__img" src="img/gotitas.png.crdownload" alt="Some image" />
+					<h3 class="content__title">ejercita</h3>
 					<p class="content__author"></p>
 					<p class="content__desc">Libera endorfinas y olvidate de tus pensamientos por un rato.</p>
 					<a href="#" class="content__link">Discover</a>
