--- a/index.html
+++ b/index.html
@@ -47,15 +47,11 @@
 					<h1 class="codrops-header__title">SOLUCIONES PARA OVERTHINKERS</h1>
 				</header>
 				<nav class="demos">
-					<a class="demo demo--current" href="index.html"><svg class="decoshape" preserveAspectRatio="none"><use xlink:href="#shape-demo"></use></svg>Demo 1</a>
-					<a class="demo" href="index2.html"><svg class="decoshape"><use xlink:href="#shape-demo"></use></svg>Demo 2</a>
-					<a class="demo" href="index3.html"><svg class="decoshape"><use xlink:href="#shape-demo"></use></svg>Demo 3</a>
 				</nav>
 				<a class="pater" href="http://synd.co/2pHxJny">
 					<svg class="pater__deco" width="300" height="240" viewBox="0 0 1000 800">
 						<path d="M27.4,171.8C73,42.9,128.6,1,128.6,1s0,0,0,0c58.5,0,368.3,0.3,873.2,0.8c38.5,211,42.1,373.5,38.9,476.7c-2.5,80.3-10.6,174.9-76.7,247.8c-15.1,16.6-37.4,41.2-72.8,53.9c-92.4,33.1-173-50.8-283.9-99.4c-224.3-98.4-334.9,51.4-472.2-45.6C-6.3,535.2-14.5,290.6,27.4,171.8z"/>
 					</svg>
-					<img class="pater__img" src="sponsor/hellosignapi.svg" alt="HelloSign API" />
 					<h4 class="pater__title">PANDEMIA COVID</h4>
 					<p class="pater__desc">cuarentena things
 			
@@ -65,52 +61,52 @@
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-1">
-					<img class="content__img" src="img/papel.png" alt="Some image" />
+					<iframe class="content__img"src="https://giphy.com/embed/ZecwzuvmRrjOHsXNcI" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/notes-note-mustard-ZecwzuvmRrjOHsXNcI"></a></p>
 					<h3 class="content__title">escribe</h3>
 					<p class="content__author"></p>
 					<p class="content__desc">vacía tu cabeza al dejar tus pensamientos en el papel.</p>
-					<a href="#" class="content__link">Discover</a>
+					<a href="https://www.futureme.org/" class="content__link">Discover</a>
 				</div>
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-2">
-					<img class="content__img" src="img/flor.png" alt="Some image" />
+					<iframe class="content__img" src="https://giphy.com/embed/EhKK2kUgMcFEc" width="480" height="416" frameBorder="0" class="giphy-embed"  opacity= "0.8" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/flower-EhKK2kUgMcFEc"></a></p>
 					<h3 class="content__title">reflexiona</h3>
 					<p class="content__author"></p>
 					<p class="content__desc">Descubre qué es lo que te preocupa o simplemente medita un rato.</p>
-					<a href="#" class="content__link">Discover</a>
+					<a href="https://www.youtube.com/watch?v=3usD165utuI" class="content__link">Discover</a>
 				</div>
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-3">
-					<img class="content__img" src="img/3.jpg" alt="Some image" />
+					<iframe class="content__img"src="https://giphy.com/embed/UWpIG9kfuDRwwqNTRu" width="360" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/fly-plane-paper-UWpIG9kfuDRwwqNTRu"></a></p>
 					<h3 class="content__title">ocupate</h3>
 					<p class="content__author"></p>
 					<p class="content__desc">Busca algo que te distraiga de tus pensamientos.</p>
-					<a href="#" class="content__link">Discover</a>
+					<a href="https://www.cazadoresdeescapes.es/lacuradelvirus/" class="content__link">Discover</a>
 				</div>
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-4">
-					<img class="content__img" src="img/ola.webp" alt="Some image" />
+					<iframe class="content__img"src="https://giphy.com/embed/ifBHjB1veMVVmO2U8M" width="480" height="401" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/plants-windy-primavera-ifBHjB1veMVVmO2U8M"></a></p>
 					<h3 class="content__title">libera</h3>
 					<p class="content__author"></p>
 					<p class="content__desc">Habla con alguien sobre lo que piensas, puede ser persona o por videollamada.</p>
-					<a href="#" class="content__link">Discover</a>
+					<a href="https://play.google.com/store/apps/details?id=com.twocatsapp.ombroamigo&hl=es&gl=US" class="content__link">Discover</a>
 				</div>
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-1">
-					<img class="content__img" src="img/gotitas.png.crdownload" alt="Some image" />
+					<iframe class="content__img"src="https://giphy.com/embed/kynr0RhjIRp7koi6Mr" width="480" height="230" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/BIMBAYLOLAofficial-transparent-bimbaylola-kynr0RhjIRp7koi6Mr"></a></p>					
 					<h3 class="content__title">ejercita</h3>
 					<p class="content__author"></p>
 					<p class="content__desc">Libera endorfinas y olvidate de tus pensamientos por un rato.</p>
-					<a href="#" class="content__link">Discover</a>
+					<a href="https://www.youtube.com/watch?v=vdNXHcbpJWA" class="content__link">Discover</a>
 				</div>
 			</div>
 			<!-- Related demos -->
 			<section class="content content--related">
-				<p class="content__info">If you enjoyed this demo you might also like:</p>
+				<p class="content__info">Si te gustó este demo conoce los demás </p>
 				<a class="content__related-item" href="https://tympanus.net/Development/ElasticSVGElements/">
 					<img class="content__related-img" src="img/related/ItemRevealer.jpg">
 					<h3 class="content__related-title">Elastic SVG Elements</h3>
