--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-1">
-					<iframe class="content__img"src="https://giphy.com/embed/ZecwzuvmRrjOHsXNcI" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/notes-note-mustard-ZecwzuvmRrjOHsXNcI"></a></p>
+					<img class="content__img" src="img/escribir.gif" alt="Some image" style="transform: translateX(0px) translateY(0px);">
 					<h3 class="content__title">1.Escribe</h3>
 					<p class="content__author"></p>
 					<p class="content__desc">vacía tu cabeza al dejar tus pensamientos en el papel.</p>
@@ -70,7 +70,7 @@
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-2">
-					<iframe class="content__img" src="https://giphy.com/embed/EhKK2kUgMcFEc" width="480" height="416" frameBorder="0" class="giphy-embed"  opacity= "0.8" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/flower-EhKK2kUgMcFEc"></a></p>
+					<img class="content__img" src="img/flordeloto.gif" alt="Some image" style="transform: translateX(0px) translateY(0px);">
 					<h3 class="content__title">2.Reflexiona</h3>
 					<p class="content__author"></p>
 					<p class="content__desc">Descubre qué es lo que te preocupa o simplemente medita un rato.</p>
@@ -79,7 +79,7 @@
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-3">
-					<iframe class="content__img"src="https://giphy.com/embed/UWpIG9kfuDRwwqNTRu" width="360" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/fly-plane-paper-UWpIG9kfuDRwwqNTRu"></a></p>
+					<img class="content__img" src="img/paperplane.gif" alt="Some image" style="transform: translateX(0px) translateY(0px);">
 					<h3 class="content__title">3.Ocupate</h3>
 					<p class="content__author"></p>
 					<p class="content__desc">Busca algo que te distraiga de tus pensamientos.</p>
@@ -88,7 +88,7 @@
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-4">
-					<iframe class="content__img"src="https://giphy.com/embed/ifBHjB1veMVVmO2U8M" width="480" height="401" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/plants-windy-primavera-ifBHjB1veMVVmO2U8M"></a></p>
+					<img class="content__img" src="img/viento.gif" alt="Some image" style="transform: translateX(0px) translateY(0px);">
 					<h3 class="content__title">4.Libera</h3>
 					<p class="content__author"></p>
 					<p class="content__desc">Habla con alguien sobre lo que piensas, puede ser persona o por videollamada.</p>
@@ -97,7 +97,7 @@
 			</div>
 			<div class="content-wrap">
 				<div class="content content--layout content--layout-1">
-					<iframe class="content__img"src="https://giphy.com/embed/kynr0RhjIRp7koi6Mr" width="480" height="230" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/BIMBAYLOLAofficial-transparent-bimbaylola-kynr0RhjIRp7koi6Mr"></a></p>					
+					<img class="content__img" src="img/gotitas.gif" alt="Some image" style="transform: translateX(0px) translateY(0px);">
 					<h3 class="content__title">5.Ejercita</h3>
 					<p class="content__author"></p>
 					<p class="content__desc">Libera endorfinas y olvidate de tus pensamientos por un rato.</p>
